core.css
/* latin-ext */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v14/S6uyw4BMUTPHjxAwXjeu.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v14/S6uyw4BMUTPHjx4wXg.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

body {
  margin: 0;
  padding: 0;
}

.title {
  font-size: 2.25em;
  line-height: 1.3;
  letter-spacing: 8px;
}

.subtitle {
  font-size: 1.5em;
  line-height: 1.4;
  letter-spacing: 8px;
}

.button {
  letter-spacing: 0.1em;
  display: block;
  padding: 14px 30px;
  color: #4781ed;
  text-decoration: none;
  border: 1px solid #4781ed;
  transition: 0.2s all;
}

.button:hover {
  background: #4781ed;
  color: #fff;
}

#hero-container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background: #161616;
}

#hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  font-family: 'DIN', 'Helvetica', sans-serif;
  color: #fff;
  text-align: center;
  max-width: 1000px;
  z-index: 5;
}

#logo {
  width: 100%;
  max-width: 250px;
}

#content {
  position: relative;
}

#content::before, #hero > #content::after {
  content: "";
  display: block;
  position: absolute;
  height: 60px;
  width: 1px;
  left: 50%;
  background: #fff;
}

#content > #inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 60px;
  padding: 0;
  height: 0;
  border: 1px solid #fff;
  border-left: none;
  border-right: none;
  padding: 0 40px;
  transition: all 800ms cubic-bezier(0.870, 0.005, 0.155, 0.995);
  overflow: hidden;
}

#content > #inner > .title {
  margin-bottom: 20px;
}

#content > #inner > .subtitle {
  margin-top: 10px;
}

#location {
  line-height: 1.5;
  text-transform: uppercase;
  letter-spacing: 0.2em;
  margin: auto;
  margin-top: 15px;
}

#location > svg {
  margin-right: 10px;
  width: 15px;
}

#buttons {
  display: flex;
  margin-top: 60px;
}

#buttons > .button {
  text-transform: uppercase;
  letter-spacing: 0.2em;
  font-size: 0.8rem;
  display: block;
  width: 140px;
  padding: 12px 0;
  color: #fff;
  text-decoration: none;
  border: 1px solid #fff;
  transition: 0.2s all;
}

#buttons > .button:hover {
  background: #fff;
  color: #000;
}

#buttons > .button + .button {
  border-left: none;
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

#bg::before {
  content: "";
  opacity: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: url('./imgs/bg1.jpg');
  background-position: center;
  background-size: cover;
  filter: blur(8px) brightness(0.5);
  animation: fadein 0.4s linear 0.2s forwards;
}


@media (min-width: 1200px) {
  #hero {
    font-size: 1.5em;
  }
}

.container {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  padding: 40px;
  background: #1a1a1a;
  color: #fff;
  font-family: 'Lato', sans-serif;
}

.container:nth-child(2n) {
  background: #161616;
}

@keyframes typing-effect {
    0% {
        border-right: 15px rgba(71, 129, 237, 0) solid;
    }
    49% {
        border-right: 15px rgba(71, 129, 237, 0) solid;
    }
    50% {
        border-right: 15px rgba(71, 129, 237, 0.5) solid
    }
    99% {
        border-right: 15px rgba(71, 129, 237, 0.5) solid
    }
    100% {
        border-right: 15px rgba(71, 129, 237, 0) solid;
    }
}

.heading {
  font-family: 'DIN', 'Helvetica', sans-serif;
  color: #4781ed;
  animation: typing-effect 1.0s linear infinite;
  font-size: 1.5rem;
  margin-bottom: 10px;
}

.content {
  display: flex;
  text-align: center;
  line-height: 1.6rem;
  letter-spacing: 0.05rem;
  margin: 20px;
}

.content > * {
  margin: 0;
}

.content > * + * {
  margin-top: 20px;
}

.icons-container {
  max-width: 1600px;
}

.icon-item {
  margin: 0 20px;
}

.icon-item .fas {
  position: relative;
  width: 70px;
  height: 70px;
  border-radius: 50%;
  border: 2px #fff solid;
  font-size: 1.5rem;
}

.icon-item .fas::before {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#social-media .fab {
  display: inline-flex !important;
  justify-content: center;
  align-items: center;
  font-size: 24px;
  padding: 16px;
  width: 28px;
  height: 28px;
  text-align: center;
  text-decoration: none;
  border-radius: 50%;
  transition: 0.2s;
  color: #fff;
  margin: 0 20px;
}

#social-media > a {
  text-decoration: none;
}

.fa-facebook {
  background: #3b5998;
}

.fa-twitter {
  background: #38A1F3;
}

